--- a/src/index.css
+++ b/src/index.css
@@ -82,9 +82,9 @@ body {
 
 .card__button {
   width: fit-content;
-  padding: 15px 30px;
+  padding: 15px 20px;
   border-radius: 500px;
-  border: none;
+  border: 2px solid var(--neutral-200);
   font-family: var(--ff-default);
   margin: 45px 0;
   cursor: pointer;
